<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.starnowski.posmulten.hibernate</groupId>
    <artifactId>parent</artifactId>
    <version>0.1-SNAPSHOT</version>
    <modules>
        <module>core</module>
        <module>test-utils</module>
        <module>core-functional-tests</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <org.hibernate.hibernate.core.version>5.6.3.Final</org.hibernate.hibernate.core.version>
        <com.github.starnowski.posmulten.postgresql.core.version>0.5.3</com.github.starnowski.posmulten.postgresql.core.version>
        <org.projectlombok.lombok.version>1.16.20</org.projectlombok.lombok.version>
        <org.codehaus.groovy.groovy-all.version>2.4.12</org.codehaus.groovy.groovy-all.version>
        <spock.core.version>1.1-groovy-2.4</spock.core.version>
        <org.postgresql.postgresql.version>42.3.3</org.postgresql.postgresql.version>
        <org.testng.testng.version>7.1.0</org.testng.testng.version>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <org.objenesis.objenesis.version>3.2</org.objenesis.objenesis.version>
        <org.mockito.mockito-inline.version>4.4.0</org.mockito.mockito-inline.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${org.hibernate.hibernate.core.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>com.github.starnowski.posmulten</groupId>
                <artifactId>postgresql-core</artifactId>
                <version>${com.github.starnowski.posmulten.postgresql.core.version}</version>
            </dependency>
            <!-- tests dependencies -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${org.projectlombok.lombok.version}</version>
                <optional>true</optional>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${org.codehaus.groovy.groovy-all.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.spockframework</groupId>
                <artifactId>spock-core</artifactId>
                <version>${spock.core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${org.testng.testng.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <optional>true</optional>
                <version>${org.postgresql.postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
<!--                TODO Add property-->
                <version>3.16.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>${org.objenesis.objenesis.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-inline</artifactId>
                <version>${org.mockito.mockito-inline.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>